changed links to .starfree.app

--- a/src/app/equa-diff/equa-diff.component.html
+++ b/src/app/equa-diff/equa-diff.component.html
@@ -9,11 +9,11 @@
 <div *ngIf="language == 'fr'" class="all-container">
   <div class="container">
     <h1>Visualiser les équations différencielles</h1>
-    <h2 class="subtitle">avec <a class="subtitle" href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a></h2>
+    <h2 class="subtitle">avec <a class="subtitle" href="https://vectorfield.starfree.app">Vector Field</a></h2>
     <p>
-      <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> permet de représenter les champs de vecteurs 
+      <a href="https://vectorfield.starfree.app">Vector Field</a> permet de représenter les champs de vecteurs 
       de manière visuelle, en simulant des milliers de particules.
-      Dans cet article, nous allons voir comment utiliser <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a>
+      Dans cet article, nous allons voir comment utiliser <a href="https://vectorfield.starfree.app">Vector Field</a>
       pour visualiser les solutions aux équations différentielles. 
     </p>
     <h2>
@@ -41,7 +41,7 @@
     Exemple: \(y' = x\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=x&t=0&minT=0&maxT=10&xRange=-2&xRange=2&yRange=-2&yRange=2&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=1&y=x&t=0&minT=0&maxT=10&xRange=-2&xRange=2&yRange=-2&yRange=2&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e1.png">
     </a>
     <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
@@ -74,7 +74,7 @@
     Exemple: \(y' = \cos(3 x) \cdot \sin(2 x y + 1)\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=cos(3%20*%20x)%20*%20sin(2%20*%20y%20*%20x%20%2B%201)&t=0&minT=0&maxT=10&xRange=-4&xRange=4&yRange=-4&yRange=4&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=1&y=cos(3%20*%20x)%20*%20sin(2%20*%20y%20*%20x%20%2B%201)&t=0&minT=0&maxT=10&xRange=-4&xRange=4&yRange=-4&yRange=4&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e2.png">
     </a>
     <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
@@ -116,7 +116,7 @@
     Exemple: \({{ex12D}}\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=y&y=-x&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=y&y=-x&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e3.png">
     </a>
     <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
@@ -144,7 +144,7 @@
     Exemple: \({{ex22D}}\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=x*y%20-%20y*y&y=-cos(3*x%20%2By)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=x*y%20-%20y*y&y=-cos(3*x%20%2By)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e4.png">
     </a>
     <span class="footnote center-align">cliquer sur les images pour ouvrir la simulation dans un nouvel onglet</span>
@@ -184,10 +184,10 @@
 <div *ngIf="language == 'en'" class="all-container">
   <div class="container">
     <h1>Visualize differential equations</h1>
-    <h2 class="subtitle">with <a class="subtitle" href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a></h2>
+    <h2 class="subtitle">with <a class="subtitle" href="https://vectorfield.starfree.app">Vector Field</a></h2>
     <p>
-      <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> lets you visually represent vector fields by simulating thousands of particles. 
-      In this article you will learn how to use <a href="https://vectorfield-dot-starfree.ew.r.appspot.com">Vector Field</a> to visualize solutions to differential equations.
+      <a href="https://vectorfield.starfree.app">Vector Field</a> lets you visually represent vector fields by simulating thousands of particles. 
+      In this article you will learn how to use <a href="https://vectorfield.starfree.app">Vector Field</a> to visualize solutions to differential equations.
     </p>
     <h2>
       One-dimensional equations
@@ -215,7 +215,7 @@
     Example: \(y' = x\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=x&t=0&minT=0&maxT=10&xRange=-2&xRange=2&yRange=-2&yRange=2&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=1&y=x&t=0&minT=0&maxT=10&xRange=-2&xRange=2&yRange=-2&yRange=2&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e1.png">
     </a>
     <span class="footnote center-align">click on images to open the simulation in a new tab</span>
@@ -247,7 +247,7 @@
     Example: \(y' = \cos(3 x) \cdot \sin(2 x y + 1)\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=1&y=cos(3%20*%20x)%20*%20sin(2%20*%20y%20*%20x%20%2B%201)&t=0&minT=0&maxT=10&xRange=-4&xRange=4&yRange=-4&yRange=4&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=1&y=cos(3%20*%20x)%20*%20sin(2%20*%20y%20*%20x%20%2B%201)&t=0&minT=0&maxT=10&xRange=-4&xRange=4&yRange=-4&yRange=4&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e2.png">
     </a>
     <span class="footnote center-align">click on images to open the simulation in a new tab</span>
@@ -289,7 +289,7 @@
     Example: \({{ex12D}}\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=y&y=-x&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=y&y=-x&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e3.png">
     </a>
     <span class="footnote center-align">click on images to open the simulation in a new tab</span>
@@ -317,7 +317,7 @@
     Example: \({{ex22D}}\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield-dot-starfree.ew.r.appspot.com/?x=x*y%20-%20y*y&y=-cos(3*x%20%2By)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield.starfree.app/?x=x*y%20-%20y*y&y=-cos(3*x%20%2By)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e4.png">
     </a>
     <span class="footnote center-align">click on images to open the simulation in a new tab</span>
@@ -339,7 +339,7 @@
     Example: \({{ex13D}}\)
   </h3>
   <div class="indent">
-    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/?x=x*x-y*y&y=2*x*y*z&z=-cos(x%20%2B%20x)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&zRange=-1&zRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&showCube=true&showAxes=true&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
+    <a  target="_blank" rel="noopener noreferrer" href="https://vectorfield3d.starfree.app/?x=x*x-y*y&y=2*x*y*z&z=-cos(x%20%2B%20x)&t=0&minT=0&maxT=10&xRange=-1&xRange=1&yRange=-1&yRange=1&zRange=-1&zRange=1&lifetime=100&particleCount=10000&normalize=false&speed=1&showCube=true&showAxes=true&color1=1&color1=1&color1=1&color1=1&color2=0.4&color2=0.4&color2=1&color2=1">
       <img class="example-img" src="../../assets/images/e5.png">
     </a>
     <span class="footnote center-align">click on images to open the simulation in a new tab</span>
