--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -3,11 +3,14 @@
     <a href="/" class="title-a">Vector Field</a>
   </div>
   <div class="field-group dimension-container">
-    <div class="dimension-toggle noselect" id="D2" [style.background-color]="'rgb(76, 76, 76)'" [style.border]="'1px solid #888'">
+    <div class="dimension-toggle noselect" id="D2">
       2D
     </div>
-    <div class="dimension-toggle noselect" id="D3" [style.background-color]="'#333'" [style.border]="'1px solid #111'" (click)="open3D()">
+    <div class="dimension-toggle noselect" id="D3"(click)="open3D()">
       3D
+    </div>
+    <div class="dimension-toggle noselect" id="S2"(click)="openSphere()">
+      S2
     </div>
   </div>
   <div class="field-group">
